--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# default_exp core"
    ]
   },
@@ -74,6 +84,66 @@
    "outputs": [],
    "source": [
     "assert say_hello(\"Dude\")==\"Hello Dude!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Say HelloSayer Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class HelloSayer:\n",
+    "    \"Say hello to `somebody` using `say_hello`\"\n",
+    "    def __init__(self, somebody): self.somebody = somebody\n",
+    "    def say(self): return say_hello(self.somebody)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Hello Alexis!', 'Alexis')"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o = HelloSayer(\"Alexis\")\n",
+    "o.say(), o.somebody"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbdev.export import notebook2script\n",
+    "notebook2script()"
    ]
   },
   {
